--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ ext{
     retrofitVersion="2.6.0"
     glideVersion = '4.9.0'
     room_version = "1.1.1"
+    lottieVersion = "2.5.1"
 }
 
 dependencies {
@@ -46,4 +47,6 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
